--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
