--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "better-scroll": "^0.4.0",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "vue": "^2.3.3",
