--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-scroll": "^0.4.0",
     "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.0.1",
     "js-base64": "^2.4.3",
     "jsonp": "^0.2.1",
     "vue": "^2.3.3",
